--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Page</title>
+    <title>Lenn Steenbergen</title>
     <style>
         body {
             display: flex;
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Page!</h1>
+    <h1>Handige Links voor het CL</h1>
+    <link href="https://outlook.office.com/mail/" _blank>
 </body>
 </html>
