--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
     <h1>Handige Links voor het CL</h1>
-    <link href="https://outlook.office.com/mail/" _blank>
+   <a href="https://outlook.office.com/mail/" _blank>Oultook Mail</a>
+    <a href="https://leerling.somtoday.nl" _blank>Somtoday</a>
 </body>
 </html>
