--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
             background-color: #f4f4f4;
             font-family: Arial, sans-serif;
         }
-        h1 a {
+        h1 {
             color: #35424a;
             font-size: 3em;
             text-align: center;
         }
+        a {
+  color: red;
+  text-decoration: none;
+  text-transform: uppercase;
+}
     </style>
 </head>
 <body>
