--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <h1>Handige Links voor het CL</h1>
         <a href="https://outlook.office.com/mail/" target="_blank">Outlook Mail</a>
         <br>
-        <a href="https://leerling.somtoday.nl" target="_blank">Somtoday</a>
+        <a href="https://leerling.somtoday.nl" target="_blank">Somtoday</a><br>
+        <a href="https://veluwseonderwijsgroep.sharepoint.com/sites/Leerlingen" target="_blank">Tegeltjessite</a>
     </div>
 </body>
 </html>
