--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenn Steenbergen & Dylano van Veenendaal</title>
     <style>
+        * {
+            margin: auto;
         body {
             display: flex;
             justify-content: center;
