--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenn Steenbergen & Dylano van Veenendaal</title>
     <style>
-        a {
-            margin: auto;
         body {
             display: flex;
             justify-content: center;
@@ -65,10 +63,10 @@
 <body>
     <div>
         <h1>Handige Links voor het CL</h1>
-        <a class="hoi" href="https://outlook.office.com/mail/" target="_blank">Outlook Mail</a>
+        <a href="https://outlook.office.com/mail/" target="_blank">Outlook Mail</a>
         <br>
-        <a class="hoi" href="https://leerling.somtoday.nl" target="_blank">Somtoday</a><br>
-        <a class="hoi" href="https://veluwseonderwijsgroep.sharepoint.com/sites/Leerlingen" target="_blank">Tegeltjessite</a>
+        <a href="https://leerling.somtoday.nl" target="_blank">Somtoday</a><br>
+        <a href="https://veluwseonderwijsgroep.sharepoint.com/sites/Leerlingen" target="_blank">Tegeltjessite</a>
     </div>
 </body>
 </html>
